# attattr

./: .gitignore  pyproject.toml  readme.md  requirements.txt
output/: tokens_and_pred_100.json
src/attattr/: __about__.py  __init__.py  attribution_tree.py  classifier_processer.py  generate_attrscore.py  get_tokens_and_pred.py
src/attattr/bert/: model_attr.py  modeling_orig.py  optimization.py
src/attattr/pytorch_pretrained_bert/: model_attr.py
