[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attattr"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "trung.pq", email = "trung.pq@teko.vn" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/trung.pq/attattr#readme"
Issues = "https://github.com/trung.pq/attattr/issues"
Source = "https://github.com/trung.pq/attattr"

[tool.hatch.version]
path = "src/attattr/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "torch>=0.4.1",
  "numpy",
  "boto3",
  "requests",
  "tqdm"
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/attattr tests}"

[tool.coverage.run]
source_pkgs = ["attattr", "tests"]
branch = true
parallel = true
omit = [
  "src/attattr/__about__.py",
]

[tool.coverage.paths]
attattr = ["src/attattr", "*/attattr/src/attattr"]
tests = ["tests", "*/attattr/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
